fix: hero align center

--- a/src/sass/4-components/_hero.scss
+++ b/src/sass/4-components/_hero.scss
@@ -3,6 +3,7 @@
 $hero-background: url('/images/bg-pattern-red.png');
 
 .hero {
+  display: flex;
   padding-top: 1rem;
   padding-bottom: 1rem;
   width: 100%;
